--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@ body {
 
 header {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
   }
 
 h1 {
