--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,10 @@ footer {
 }
 
 .drum {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: repeat(2,1fr);
+  gap: 10px;
   outline: none;
   border: 10px solid #404B69;
   font-size: 5rem;
