--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ footer {
 }
 
 .w {
-  background-image: url("images/tom1.png");
+  background-image: url("https://www.freepnglogos.com/uploads/doraemon-png/blink-doraemon-photo-11.png");
 }
 
 .a {
