--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ footer {
 }
 
 .a {
-  background-image: url("images/tom2.png");
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoAahYmRg0FEIw3z46C8SBNZ1nm_dZD9WqhVoYAeRhmw&s");
 }
 
 .s {
