--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ footer {
 }
 
 .s {
-  background-image: url("images/tom3.png");
+  background-image: url("https://www.freepnglogos.com/uploads/doraemon-png/blink-doraemon-photo-11.png");
 }
 
 .d {
