--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ footer {
 }
 
 .d {
-  background-image: url("images/tom4.png");
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkyh4fQsjqgRahJgsBBlTsJZ0nf4D8xXmuU8JyJzQ&s");
 }
 
 .j {
