--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ footer {
 }
 
 .j {
-  background-image: url("images/snare.png");
+  background-image: url("https://thumbnail.imgbin.com/16/2/3/imgbin-doraemon-nobita-to-yousei-no-kuni-comic-book-comics-doraemon-1N7LBB919ULKcCyY11MFMYtNJ_t.jpg");
 }
 
 .k {
