--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ footer {
 }
 
 .k {
-  background-image: url("images/crash.png");
+  background-image: url("https://freepngimg.com/thumb/doraemon/71299-nobi-youtube-nobita-television-doraemon-free-photo-png-thumb.png");
 }
 
 .l {
