--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ footer {
 }
 
 .l {
-  background-image: url("images/kick.png");
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoC5Z9ALAJrUTzVCuKOt-c8AkPNrsM8x0EbWSBH76i&s");
 }
 
 .set {
