--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ footer {
 }
 
 .s {
-  background-image: url("https://www.freepnglogos.com/uploads/doraemon-png/blink-doraemon-photo-11.png");
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRxf3PhCA-yH6JLzdaV4lW6uqguRWoxoM15-g&usqp=CAU");
 }
 
 .d {
