--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ footer {
   background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoC5Z9ALAJrUTzVCuKOt-c8AkPNrsM8x0EbWSBH76i&s");
 }
 
-.l {
+.A {
   background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzDvLof7ECxi2YEK2HR78UUw-O1Pp4BTL6kg&usqp=CAU");
 }
 
